// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`describe @ipld/js-cid/CID 1`] = `
Uint8Array [
  18,
  32,
  118,
  235,
  25,
  118,
  33,
  143,
  166,
  93,
  251,
  34,
  204,
  61,
  170,
  64,
  107,
  32,
  93,
  13,
  209,
  164,
  100,
  141,
  2,
  1,
  83,
  64,
  131,
  90,
  74,
  131,
  217,
  182,
]
`;

exports[`describe @ipld/js-cid/CID 2`] = `
{
  "codec": "dag-pb",
  "hash": Uint8Array [
    18,
    32,
    118,
    235,
    25,
    118,
    33,
    143,
    166,
    93,
    251,
    34,
    204,
    61,
    170,
    64,
    107,
    32,
    93,
    13,
    209,
    164,
    100,
    141,
    2,
    1,
    83,
    64,
    131,
    90,
    74,
    131,
    217,
    182,
  ],
  "version": 1,
}
`;

exports[`describe @ipld/js-multiformats/CID 1`] = `
Digest {
  "bytes": Uint8Array [
    18,
    32,
    118,
    235,
    25,
    118,
    33,
    143,
    166,
    93,
    251,
    34,
    204,
    61,
    170,
    64,
    107,
    32,
    93,
    13,
    209,
    164,
    100,
    141,
    2,
    1,
    83,
    64,
    131,
    90,
    74,
    131,
    217,
    182,
  ],
  "code": 18,
  "digest": Uint8Array [
    118,
    235,
    25,
    118,
    33,
    143,
    166,
    93,
    251,
    34,
    204,
    61,
    170,
    64,
    107,
    32,
    93,
    13,
    209,
    164,
    100,
    141,
    2,
    1,
    83,
    64,
    131,
    90,
    74,
    131,
    217,
    182,
  ],
  "size": 32,
}
`;

exports[`describe @ipld/js-multiformats/CID 2`] = `
{
  "code": 112,
  "hash": Uint8Array [
    18,
    32,
    118,
    235,
    25,
    118,
    33,
    143,
    166,
    93,
    251,
    34,
    204,
    61,
    170,
    64,
    107,
    32,
    93,
    13,
    209,
    164,
    100,
    141,
    2,
    1,
    83,
    64,
    131,
    90,
    74,
    131,
    217,
    182,
  ],
  "version": 1,
}
`;
